test_scores/negative_dimers/features/Q5W5X9.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q5W5X9.pkl.xz